# oscomp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.bk  README.md  build.sh  compile.sh  compile_run.sh  debug.sh  disable_build.py  docker-qemu.sh  gdb cheater.md  gdbinit.txt  logs.txt  merge_branch.sh  output  printu disassemble.txt  readelf.sh  run.sh  spike.cfg  start-qemu.sh  switch_branch.sh  upload.py
doc/: page元数据设计.md  命名惯例.md  完整的posix dentry支持.md
doc/draft/Feb2/: kiocb.c  kiocb.h  lookup_flags.md
doc/draft/Feb3/: ext4_adapter.c  get_seconds.md  虚拟机怎么知道qemu给它1G内存.md
doc/draft/Feb5/: syscall_arch.h  改良trap.md
doc/draft/Mar20-/: dentry硬链接.md  file_lock.md  处理mount需要做的事情.md  完整的posix dentry支持.md  文件锁设计.md  统一生命周期术语.md  页缓存.md
doc/draft/Mar21/: kiocb.c  kiocb.c.bk  kiocb.h.bk  kiocbpatch.c  kiocbpatch.h  kiocb中的位置指针.md  kmountAndumount.md  linux工作队列机制概述.md  whyNamespace.md  统一的中断框架.md  统一的阻塞框架.md  调度器宏观设计.md  调度器方法概括.md  调度策略之间的协调.md
doc/draft/Mar22/: address_space.c
doc/draft/Mar23/: aops的初始化问题.md
doc/draft/Mar24/: ext4具体接口设计.md  ext4适配层的剩余工作.md  如何集成lwext4.md
doc/draft/Mar25/: block_device适配样例.md  ext4_block_adapter.c  ext4_block_adapter.h  mount全流程管理.md  垂直整合vfs接口.md  对于mount的完善处理.md
doc/draft/Mar27/: linux内核的initramfs.md  namespace.c  namespace.h  ramfs具体设计过程.md  具体linux初始化过程.md  根目录.md  自己做一个initramfs.md  补充timer.md  设备文件初始化.md  设备树虚拟文件初始化.md
doc/draft/Mar28/: all.md  设备注册.md
doc/draft/Mar29/: init task.md
doc/draft/Mar30/: console device design.md  console init和initramfs.md  console架构设计.md  dtb.c  三友系统.md  使用vfs初始化console.md  使用统一的缓存策略.md  到底有哪些write.md  控制台实现.md  推翻整个文件系统.md  统一的缓存预读预写策略.md
doc/fs/: fs实现顺序.md  linux文件系统分层结构.md  superblock.md  vfs层提供的方法.md  切换根目录时转移虚拟目录.md  文件系统的挂载顺序.md  文件系统的调用和转发.md  标准文件描述符的初始化.md  根目录的切换.md  硬链接.md
doc/fs/vfs/: address_space.md  dentry.md  fd_table.md  file.md  fs_struct.md  inode.md  superblock.md  vfs整体设计.md
doc/mm/: init_mm和kmalloc的差异.md  init_mm空间.md  mm_struct和vm_area_struct的关系.md  如何在mm_map_pages中实现懒分配.md
doc/sched/: 0号进程.md  0号进程的大致思路.md  pid.md  子进程和兄弟进程.md  进程主动阻塞.md
doc/todo/: linux的dentry方法.md  不允许卸载superblock.md  完整的file对象方法清单.md
draft/Mar20-/: linux信号机制.md  posix file.md  在遍历的时候处理mount.md  通用的事件队列设计.md
draft/Mar21/: kiocb.c  kiocb.h  全面引入kiocb.md  简化的kiocb回调.md
draft/Mar22/: 对fstype的增强.md
draft/Mar24/: ext4的接口设计.md
hostfs/: app_exec
include/kernel/: address_space.h  atomic.h  config.h  elf.h  ext2.h  feature.h  file.h  fmode.h  hostfs.h  inode.h  kmalloc.h  list.h  memlayout.h  mm_struct.h  mmap.h  mmu.h  page.h  pagetable.h  param.h  pmm.h  proc_file.h  process.h  rfs.h  riscv.h  sched.h  semaphore.h  slab.h  spinlock.h  sprint.h  strap.h  super_block.h  syscall.h  syscall_file.h  syscall_memory.h  time.h  trapframe.h  types.h  user_mem.h  user_mm.h  util.h  (+2 more)
include/spike_interface/: dts_parse.h  spike_htif.h  spike_memory.h  spike_utils.h
include/util/: atomic.h  hash_table.h.bk  hashtable.h  list.h  qstr.h  queue.h  radix_tree.h  spinlock.h  string.h  tree.h
kernel/: CMakeLists.txt  config.h  elf.c  elf.h  global.c  global.h  hash_table.c  hostfs.h  kernel.c  kernel.lds  pmm.c  pmm.h  proc_file.c  proc_file.h  process.c  process.h  rfs.c  rfs.h  riscv.h  sched.c  semaphore.c  semaphore.h  strap.c  strap_vector.S  string.c  sync_utils.h  syscall.c  syscall.h  time.c  utils.c  utils.h  vfs.c  vfs.h  vmm.c  vmm.h
kernel/arch/riscv/: entry.S  minit.c  mtrap.c  mtrap.c.bk  mtrap_vector.S  strap_vector.S
kernel/boot/: dtb.c  kernel.c
kernel/device/: block_cache.c  block_device.c  buffer_head.c  dev_interface.c  device.c
kernel/driver/: dts_parse.c
kernel/driver/spike/: spike_file.c  spike_htif.c  spike_memory.c  spike_utils.c
kernel/drivers/: dts_parse.c
kernel/drivers/spike/: spike_htif.c  spike_utils.c
kernel/elf/: elf.c
kernel/fs/: address_space.c  dentry.c  file.c  file_system_type.c  fs_init.c  fs_struct.c  fstype.c  hostfs.c  hostfs.c.bk  inode.c  kiocb.c  namespace.c  path.c  ramdev.c  ramfs.c  ramfs.c.bk  rfs.c  rfs.c.bk  superblock.c  vfs.c  vfs.c.bk  vfs_init.c
kernel/fs/ext4/: ext4_blockdev.c  ext4_file.c  ext4_fs.c  ext4_helper.c  ext4_inode.c  ext4_superblock.c  inode_operations.c
kernel/fs/inode/: inode.c  inode_cache_init.c
kernel/fs/lwext4/: ext4.c  ext4_balloc.c  ext4_bcache.c  ext4_bitmap.c  ext4_block_group.c  ext4_blockdev.c  ext4_crc32.c  ext4_debug.c  ext4_dir.c  ext4_dir_idx.c  ext4_extent.c  ext4_fs.c  ext4_hash.c  ext4_ialloc.c  ext4_inode.c  ext4_journal.c  ext4_mbr.c  ext4_mkfs.c  ext4_super.c  ext4_trans.c  ext4_xattr.c
kernel/fs/spike/: spike_file.c
kernel/fs/vfs/: address_space.c  buffer_head.c  dentry.c  dentry_cache_init.c  fdtable.c  file.c  file_operations.c  fs_struct.c  fstype.c  icache.c  inode.c  kiocb.c  namespace.c  path.c  superblock.c  vfs.c  vfs_init.c  vfsmount.c
kernel/machine/: minit.c  mtrap.c
kernel/mm/: init_mm.c  kmalloc.c  mm_struct.c  mmap.c  page.c  pagetable.c  pmm.c  slab.c  uaccess.c  user_mm.c  vma.c  vmm.c
kernel/proc/: proc_file.c  proc_file.c.bk  process.c  sched.c
kernel/sched/: fdtable.c  fs_struct.c  idle_task.c  init_task.c  pid.c  proc_file.c  proc_file.c.bk  process.c  sched.c  signal.c
kernel/strap/: strap.c
kernel/syscall/: clone.c  exit.c  getdents64.c  mmap.c  mount.c  openat.c  read.c  syscall.c  syscall_entry.c  syscall_file.c  syscall_fs.c  syscall_time.c  time.c  write.c
kernel/util/: hash_table.c.bk  hashtable.c  misc.c  print.c  qstr.c  radix_tree.c  snprintf.c  string.c  vprint.c
script/: build-lwext4.sh  build-musl.sh  create_filesystem.sh  init-vendor.sh  lookupip.sh  make_busybox.sh
scripts/: build.sh  compile.sh
spike_interface/: atomic.h  dts_parse.c  spike_file.c  spike_file.h  spike_htif.c  spike_htif.h  spike_memory.c  spike_utils.c  spike_utils.h
user/: CMakeLists.txt  app1.c  app_alloc0.c  app_exec.c  app_print_backtrace.c  app_semaphore.c  app_singlepageheap.c  app_wait.c  user.lds  user0.lds  user_lib.c  user_lib.h
util/: hash_table.c  snprintf.c  snprintf.h  string.c
(+123 files in other folders)
